# AdjoinableMPI

./: .hgignore  COPYRIGHT  Doxyfile  Makefile.am  autogen.sh  configure.ac
ADtoolStubs/OO/: Makefile.am  support.c
ADtoolStubs/ST/: Makefile.am  fortranSupport.F  support.c
Bookkeeping/: Makefile.am  support.c
Check/: Makefile.am  linkComplete.c
Common/: Makefile.am  ampi_f2c.c  modified.c  nt.c  passThrough.c  st.c  window.c
PlainC/: Makefile.am  modified.c  nt.c  passThrough.c  st.c
ProtoType1/: Makefile  active.h  ampi.c  ampi.h  ampi_bookKeeping.c  ampi_bookKeeping.h  compute.F90  compute.c  computeAdj.c  driver.c  driverAdj.c  init.c
Tape/: Makefile.am  support.c
adToolStubs/OO/: Makefile.am  support.c
adToolStubs/ST/: support.c
ampi/: Makefile.am  ampi.h  ampif.h
ampi/adTool/: support.h
ampi/bookkeeping/: support.h
ampi/internal/: activity.h  libConfig.h.in  modified.h  nt.h  pairedWith.h  passThrough.h  request.h  st.h
ampi/libCommon/: modified.h  st.h
ampi/tape/: support.h
ampi/userIF/: activity.h  libConfig.h.in  modified.h  nt.h  pairedWith.h  passThrough.h  request.h  st.h  window.h
ampi_tape/: ampi.c  ampi.h  ampi_interface.cc  ampi_tape.c  ampi_tape.h
config/: mpi.m4
plainC/: Makefile.am  ampi.c  modified.c  nt.c  st.c
