userincludedir = @includedir@/ampi
userinclude_HEADERS = \
ampi.h 

userIFincludedir = @includedir@/ampi/userIF
userIFinclude_HEADERS = \
userIF/activity.h \
userIF/libConfig.h \
userIF/modified.h \
userIF/nt.h \
userIF/pairedWith.h \
userIF/passThrough.h \
userIF/request.h \
userIF/st.h

adToolincludedir = @includedir@/ampi/adTool
adToolinclude_HEADERS = \
adTool/support.h 

tapeincludedir = @includedir@/ampi/tape
tapeinclude_HEADERS = \
tape/support.h

libCommonincludedir = @includedir@/ampi/libCommon
libCommoninclude_HEADERS = \
libCommon/modified.h \
libCommon/st.h 
